RESOLVED FIXED168824
.. should not remove windows drive letters in paths of file URLs
https://bugs.webkit.org/show_bug.cgi?id=168824
Summary .. should not remove windows drive letters in paths of file URLs
Alex Christensen
Reported 2017-02-23 22:57:46 PST
.. should not remove windows drive letters in paths of file URLs
Attachments
Patch (8.87 KB, patch)
2017-02-23 22:59 PST, Alex Christensen
no flags
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 (927.12 KB, application/zip)
2017-02-24 00:06 PST, Build Bot
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (847.47 KB, application/zip)
2017-02-24 00:17 PST, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-elcapitan (1.72 MB, application/zip)
2017-02-24 00:18 PST, Build Bot
no flags
Patch (12.36 KB, patch)
2017-02-24 00:56 PST, Alex Christensen
youennf: review+
Alex Christensen
Comment 1 2017-02-23 22:59:42 PST
Build Bot
Comment 2 2017-02-24 00:06:21 PST
Comment on attachment 302647 [details] Patch Attachment 302647 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3183663 New failing tests: fast/url/file.html fast/url/relative-win.html fast/url/file-http-base.html
Build Bot
Comment 3 2017-02-24 00:06:24 PST
Created attachment 302651 [details] Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-02-24 00:17:55 PST
Comment on attachment 302647 [details] Patch Attachment 302647 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3183667 New failing tests: fast/url/file.html fast/url/relative-win.html fast/url/file-http-base.html
Build Bot
Comment 5 2017-02-24 00:17:58 PST
Created attachment 302652 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-02-24 00:18:50 PST
Comment on attachment 302647 [details] Patch Attachment 302647 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3183680 New failing tests: fast/url/file.html fast/url/relative-win.html fast/url/file-http-base.html
Build Bot
Comment 7 2017-02-24 00:18:54 PST
Created attachment 302653 [details] Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Alex Christensen
Comment 8 2017-02-24 00:56:53 PST
Alex Christensen
Comment 9 2017-02-24 08:47:53 PST
Note You need to log in before you can comment on or make changes to this bug.