Source/WebCore/platform/URLParser.cpp
@@ -870,8 +870,11 @@ void URLParser::copyURLPartsUntil(const URL& base, URLPart part, const CodePoint
     case Scheme::WS:
     case Scheme::WSS:
         isUTF8Encoding = true;
-        FALLTHROUGH;
+        m_urlIsSpecial = true;
+        return;
     case Scheme::File:
+        m_urlIsFile = true;
+        FALLTHROUGH;
     case Scheme::FTP:
     case Scheme::Gopher:
     case Scheme::HTTP:
@@ -981,16 +984,31 @@ void URLParser::consumeDoubleDotPathSegment(CodePointIterator<CharacterType>& c)
     consumeSingleDotPathSegment(c);
 }
 
+bool URLParser::shouldPopPath(unsigned newPathAfterLastSlash)
+{
+    ASSERT(m_didSeeSyntaxViolation);
+    if (!m_urlIsFile)
+        return true;
+
+    ASSERT(m_url.m_pathAfterLastSlash <= m_asciiBuffer.size());
+    CodePointIterator<LChar> componentToPop(&m_asciiBuffer[newPathAfterLastSlash], &m_asciiBuffer[0] + m_url.m_pathAfterLastSlash);
+    if (newPathAfterLastSlash == m_url.m_portEnd + 1 && isWindowsDriveLetter(componentToPop))
+        return false;
+    return true;
+}
+
 void URLParser::popPath()
 {
     ASSERT(m_didSeeSyntaxViolation);
     if (m_url.m_pathAfterLastSlash > m_url.m_portEnd + 1) {
-        m_url.m_pathAfterLastSlash--;
-        if (m_asciiBuffer[m_url.m_pathAfterLastSlash] == '/')
-            m_url.m_pathAfterLastSlash--;
-        while (m_url.m_pathAfterLastSlash > m_url.m_portEnd && m_asciiBuffer[m_url.m_pathAfterLastSlash] != '/')
-            m_url.m_pathAfterLastSlash--;
-        m_url.m_pathAfterLastSlash++;
+        auto newPathAfterLastSlash = m_url.m_pathAfterLastSlash - 1;
+        if (m_asciiBuffer[newPathAfterLastSlash] == '/')
+            newPathAfterLastSlash--;
+        while (newPathAfterLastSlash > m_url.m_portEnd && m_asciiBuffer[newPathAfterLastSlash] != '/')
+            newPathAfterLastSlash--;
+        newPathAfterLastSlash++;
+        if (shouldPopPath(newPathAfterLastSlash))
+            m_url.m_pathAfterLastSlash = newPathAfterLastSlash;
     }
     m_asciiBuffer.resize(m_url.m_pathAfterLastSlash);
 }
@@ -1207,6 +1225,7 @@ void URLParser::parse(const CharacterType* input, const unsigned length, const U
                 switch (scheme(urlScheme)) {
                 case Scheme::File:
                     m_urlIsSpecial = true;
+                    m_urlIsFile = true;
                     state = State::File;
                     ++c;
                     break;
